// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Members/> Should render Members 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Members/> with <Notification /> Should render Members with <Notification /> when have notifications 1`] = `
<DocumentFragment>
  <aside
    class="af-notifications af-notifications--open"
  >
    <div
      class="af-alert af-alert--notification af-alert--error"
    >
      <button
        class="af-alert__icon-close"
      >
        <i
          class="glyphicon glyphicon-close"
        />
      </button>
      <div
        class="af-alert__title"
      >
        <div
          class="af-alert__title-icon"
        >
          <i
            class="glyphicon glyphicon-minus-sign"
          />
        </div>
        <div
          class="af-alert__title-text"
        >
          title
        </div>
      </div>
    </div>
  </aside>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
       
    </div>
  </div>
</DocumentFragment>
`;
